--- a/package.json
+++ b/package.json
@@ -2,19 +2,31 @@
   "name": "hrl-music",
   "version": "0.1.0",
   "private": true,
+  "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.19.3",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "7.2.1",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
+    "redux": "4.0.5",
+    "redux-immutable": "4.0.0",
+    "redux-thunk": "2.3.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
