--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.1",
-    "react-router-config": "^5.1.1",
-    "react-router-dom": "5.2.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux": "4.0.5",
     "redux-immutable": "4.0.0",
